kubernetes/apps/tools/jitsi-meet/app/httproute.yaml
---
# yaml-language-server: $schema=https://homelab-schemas-epg.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: meet
spec:
  hostnames:
    - meet.${SECRET_DOMAIN}
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
    - name: external
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: meet-web
          port: 80
